--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -9,7 +9,7 @@
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
-    background-color: #ffffff;
+    background-color: #fff !important;
     height: 100%;
     position: fixed;
     font-size: 0px;
@@ -62,12 +62,37 @@
       margin-left: -2px;
     }
 
-    .el-menu {
+   .el-menu {
       border: none;
       height: 100%;
       width: 100% !important;
+      background-color: transparent;
+      a {
+        li {
+          .svg-icon {
+            color: #333;
+            font-size: 18px;
+            vertical-align: middle;
+            .icon {
+              color: #333;
+            }
+          }
+          span {
+            color: #333 !important;
+          }
+          &:hover {
+            background-color: #fff !important;
+            .svg-icon {
+              color: #43a7fe;
+            }
+            span {
+              color: #43a7fe;
+            }
+          }
+        }
+      }
     }
-
+    
     // menu hover
     .submenu-title-noDropdown,
     .el-submenu__title {
@@ -77,16 +102,16 @@
     }
 
     .is-active > .el-submenu__title {
-      color: $subMenuActiveText !important;
+      color: #333 !important;
     }
 
     & .nest-menu .el-submenu > .el-submenu__title,
     & .el-submenu .el-menu-item {
       min-width: $sideBarWidth !important;
-      background-color: $subMenuBg !important;
+      background-color: #fff !important;
 
       &:hover {
-        background-color: $subMenuHover !important;
+        background-color: #ccc !important;
       }
     }
   }
@@ -200,7 +225,7 @@
   .el-menu-item {
     &:hover {
       // you can use $subMenuHover
-      background-color: $menuHover !important;
+      background-color: #fff !important;
     }
   }
 
