--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,7 +12,7 @@ $panGreen: #30B08F;
 $green1: #44b549;
 
 // sidebar
-$menuText:#ffffff;
+$menuText:#000000;
 $menuActiveText:#409EFF;
 $subMenuActiveText:#f4f4f5; // https://github.com/ElemeFE/element/issues/12951
 
